# addit_task_project

./: .gitignore  README.md  main.py  pyproject.toml
src/: addit_function.py  hw_11_1.py
